force-app/main/default/objects/LINE_OA_Configuration__c/LINE_OA_Configuration__c.object-meta.xml
<CustomObject>
    <description
  >One record per LINE Official Account (Messaging API channel), assigned to a sales rep. The rep owns all conversations of this OA. The channel secret is not stored here (see LINE_OA_Credential__c).</description>
    <label>LINE OA Configuration</label>
    <nameField>
        <label>LINE OA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LINE OA Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>