force-app/main/default/objects/LINE_OA_Configuration__c/fields/Assigned_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Sales rep who owns all conversations of this OA. Changing it moves the OA's conversations to the new rep.</description>
    <label>Assigned Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LINE OA Configurations</relationshipLabel>
    <relationshipName>LINE_OA_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>