force-app/main/default/objects/LINE_OA_Configuration__c/fields/Basic_Id__c.field-meta.xml
<CustomField>
    <fullName>Basic_Id__c</fullName>
    <description
  >The OA's basic ID (e.g. @123abcde), used for add-friend links and QR invites.</description>
    <label>Basic ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>