force-app/main/default/objects/LINE_OA_Configuration__c/fields/Bot_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Bot_User_Id__c</fullName>
    <description
  >The OA's bot user ID (GET /v2/bot/info userId). Equals the destination value of incoming webhooks and routes them to this OA.</description>
    <externalId>true</externalId>
    <label>Bot User ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>