force-app/main/default/objects/LINE_OA_Configuration__c/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <description
  >LINE Messaging API channel ID. Unique; used as the key for the channel secret in the protected credential setting.</description>
    <externalId>true</externalId>
    <label>Channel ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>