force-app/main/default/objects/LINE_OA_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Inactive OAs still accept webhooks, but new and moved conversations go to the fallback owner in LINE Settings.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>