force-app/main/default/objects/LINE_OA_Configuration__c/fields/Last_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_At__c</fullName>
    <description
  >When the credentials and webhook were last checked with LINE.</description>
    <label>Last Verified At</label>
    <type>DateTime</type>
</CustomField>