force-app/main/default/objects/LINE_OA_Configuration__c/fields/Picture_Url__c.field-meta.xml
<CustomField>
    <fullName>Picture_Url__c</fullName>
    <description>The OA's profile picture URL from LINE bot info.</description>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>