force-app/main/default/objects/LINE_OA_Configuration__c/fields/Webhook_Status__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Status__c</fullName>
    <description>Result of the last webhook set/test call to LINE.</description>
    <label>Webhook Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>