force-app/main/default/objects/LINE_OA_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Basic_Id__c</columns>
    <columns>Channel_Id__c</columns>
    <columns>Assigned_Rep__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Webhook_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>